# actionkid

./: .gitignore  ActionKid.cabal  Makefile  README.markdown  SOUND.markdown  TODOS.markdown  TROUBLESHOOTING.markdown  cabal.sandbox.config  getting_sdl_working.markdown
spec/: Main.hs
src/: ActionKid.hs  Main.hs
src/ActionKid/: Core.hs  Globals.hs  Internal.hs  Types.hs  Utils.hs
