name:                ActionKid
version:             0.1.0.0
synopsis:            An easy-to-use video game framework for Haskell.
description:         See examples and full readme on the Github page: https:\/\/github.com\/egonSchiele\/actionkid
homepage:            http://adit.io
license:             BSD3
license-file:        LICENSE
author:              Aditya Bhargava
maintainer:          bluemangroupie@gmail.com
-- copyright:
category:            Game Engine
build-type:          Simple
cabal-version:       >=1.8

executable actionkid
  build-depends:       base ==4.6.*, gloss, StateVar, lens, gloss-juicy, mtl, template-haskell, JuicyPixels ==3.1.*, JuicyPixels-repa ==0.7, containers ==0.5.0.*, OpenGL ==2.8.0.*
  hs-source-dirs:      src
  main-is: Main.hs
  ghc-options: -rtsopts -threaded "-with-rtsopts=-M500m -N"

Test-Suite test-actionkid
  type:       exitcode-stdio-1.0
  build-depends:       base ==4.6.*, hspec, ActionKid
  hs-source-dirs:      spec, src
  main-is:             Main.hs

library
  build-depends:       base ==4.6.*, gloss, StateVar, lens, gloss-juicy, mtl, template-haskell, JuicyPixels ==3.1.*, JuicyPixels-repa ==0.7, containers ==0.5.0.*, OpenGL ==2.8.0.*
  exposed-modules:     ActionKid, ActionKid.Types, ActionKid.Core, ActionKid.Utils
  hs-source-dirs:      src
  Other-modules:       ActionKid.Internal, ActionKid.Globals
  ghc-options: -rtsopts -threaded "-with-rtsopts=-M500m -N"
