name:                ActionKid
version:             0.1.1.0
synopsis:            An easy-to-use video game framework for Haskell.
description:         See examples and full readme on the Github page: https:\/\/github.com\/egonSchiele\/actionkid
homepage:            https://github.com/egonSchiele/actionkid
license:             BSD3
license-file:        LICENSE
author:              Aditya Bhargava
maintainer:          bluemangroupie@gmail.com
-- copyright:
category:            Game Engine
build-type:          Simple
cabal-version:       >=1.8

executable actionkid
  build-depends:       base >=4.6 && <5, gloss, StateVar, lens, gloss-juicy, mtl, template-haskell, containers >=0.5.0 && <0.6, OpenGL >=2.8.0 && <2.10
  hs-source-dirs:      src
  main-is: Main.hs
  ghc-options: -rtsopts -threaded "-with-rtsopts=-M500m -N"

Test-Suite test-actionkid
  type:       exitcode-stdio-1.0
  build-depends:       base >=4.6 && <5, hspec, ActionKid
  hs-source-dirs:      spec
  main-is:             Main.hs

library
  build-depends:       base >=4.6 && <5, gloss, StateVar, lens, gloss-juicy, mtl, template-haskell, containers >=0.5.0 && <0.6, OpenGL >=2.8.0 && <2.10
  exposed-modules:     ActionKid, ActionKid.Types, ActionKid.Core, ActionKid.Utils
  hs-source-dirs:      src
  Other-modules:       ActionKid.Internal, ActionKid.Globals
  ghc-options: -rtsopts -threaded "-with-rtsopts=-M500m -N"
